--- a/sendmail/templates/staffdetails.html
+++ b/sendmail/templates/staffdetails.html
@@ -18,7 +18,7 @@
         <div class="flex flex-col items-center pb-10 sm:mt-3 space-y-4">
     
             <!-- Profile Picture -->
-            <img class="md:mt-5 mt-8 mb-3 w-32 h-32 rounded-full shadow-lg" src="{{ staff.staffimage.url }}"
+            <img class="md:mt-5 mt-8 mb-3 w-32 h-32 rounded-full shadow-lg" src="{{ staff.staff_image.url }}"
                 alt="{{ staff.first_name }} {{ staff.last_name }} image">
     
             <!-- Name -->
