--- a/sendmail/templates/stafflist.html
+++ b/sendmail/templates/stafflist.html
@@ -53,7 +53,7 @@
                         <!-- Profile Picture -->
                         <div class="flex items-center space-x-4">
                             <div class="flex-shrink-0">
-                                <img class="w-14 h-14 rounded-full" src="{{ staff.staffimage.url }}"
+                                <img class="w-14 h-14 rounded-full" src="{{ staff.staff_image.url }}"
                                     alt="{{ staff.first_name }}'s' image">
                             </div>
         
