--- a/sendmail/templates/addstaff.html
+++ b/sendmail/templates/addstaff.html
@@ -37,11 +37,11 @@
     <div class="min-h-full flex items-center justify-center mb-8 py-8 sm:px-6 lg:px-8">
     
         <!-- Inner Container -->
-        <div class="max-w-3xl w-full bg-white shadow-md rounded-lg px-10 py-6 pb-10">
+        <div class="max-w-3xl w-full bg-white shadow-md rounded-lg px-10 py-8">
     
             <!-- Title -->
             <div>
-                <h2 class="mb-6 text-center text-3xl font-extrabold text-gray-900">Add a Staff</h2>
+                <h2 class="mb-6 text-center text-3xl font-extrabold underline underline-offset-2 text-gray-900">Add a Staff</h2>
             </div>
     
             <!-- Form -->
@@ -129,9 +129,9 @@
     
                 <!-- Submit Button -->
                 <div>
-                    <button type="submit" class="group relative w-full flex justify-center mt-8 py-4 px-4 border border-transparent 
-                                    text-md font-medium rounded-md text-white bg-indigo-700 hover:bg-indigo-600 focus:outline-none 
-                                    focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                    <button type="submit" class="group relative w-full flex justify-center mt-8 mb-4 py-4 px-4 border border-transparent 
+                                                text-md font-medium rounded-md text-white bg-indigo-700 hover:bg-indigo-600 focus:outline-none 
+                                                 focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
                         <span class="absolute left-0 inset-y-0 flex items-center pl-3">
                             <!-- Heroicon name: user-plus -->
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" viewBox="0 0 20 20" fill="currentColor">
