--- a/sendmail/templates/staffdetails.html
+++ b/sendmail/templates/staffdetails.html
@@ -11,19 +11,21 @@
 
 {% block content %}
     <!-- Profile card -->
-    <div class="min-h-full container mt-8 mb-12 md:mt-8 md:mb-12 mx-auto items-center max-w-lg w-full bg-white rounded-lg 
-                        border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">       
-    
+    <div class="min-h-full container mt-8 mb-12 md:mt-8 md:mb-12 mx-auto items-center md:max-w-3xl w-full bg-white rounded-lg 
+                border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">       
+        
+        
         <!-- Staff Details -->
-        <div class="flex flex-col items-center pb-10 sm:mt-3 space-y-4">
-    
-            <!-- Profile Picture -->
-            <img class="md:mt-5 mt-8 mb-3 w-32 h-32 rounded-full shadow-lg" src="{{ staff.staff_image.url }}"
-                alt="{{ staff.first_name }} {{ staff.last_name }} image">
-    
+        <div class="flex flex-col items-center md:px-8 pb-10 sm:mt-3 space-y-4">
+            <!-- Profile Picture -->    
+            <div class="justify-center md:px-8 mt-4 md:mt-6 mb-3">
+                <img class="md:mt-5 mt-8 mb-3 w-32 h-32 rounded-full shadow-lg" src="{{ staff.staff_image.url }}"
+                    alt="{{ staff.first_name }} {{ staff.last_name }} image">
+            </div>
+            
             <!-- Name -->
-            <div>
-                <h5 class="mb-1 text-2xl font-extrabold text-gray-800 dark:text-white">
+            <div class="text-center">
+                <h5 class="text-3xl font-extrabold text-gray-800 dark:text-white">
                     {{ staff.first_name }}
                     {% if staff.middle_name %}
                         {{ staff.middle_name }}
@@ -32,87 +34,136 @@
                     {% endif %}
                     {{ staff.last_name }}
                 </h5>
-            </div>
-    
-            <!-- Position -->
-            <div class="inline-flex items-center justify-center">
-                <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 text-gray-500 h-6 w-6" fill="none"
-                    viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                    <path stroke-linecap="round" stroke-linejoin="round"
-                        d="M21 13.255A23.931 23.931 0 0112 15c-3.183 0-6.22-.62-9-1.745M16 6V4a2 2 0 00-2-2h-4a2 2 0 00-2 2v2m4 6h.01M5 20h14a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
-                </svg>
-                {% if staff.position %}
-                    <p class="text-lg font-bold text-gray-500 dark:text-gray-400">{{ staff.position }}</p>
-                    {% else %}
-                        <span class="-mt-1 text-lg font-bold text-gray-500 dark:text-gray-400"><em>not given</em></span>
-                {% endif %}
-            </div>
-    
-            <!-- Phone Number -->
-            <div class="inline-flex items-center">
-                <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mt-1 mr-2 text-gray-500 h-6 w-6" fill="none"
-                    viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                    <path stroke-linecap="round" stroke-linejoin="round"
-                        d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" />
-                </svg>
-                {% if staff.phone_number %}
-                    <p class="text-lg font-bold text-gray-500 dark:text-gray-400">{{ staff.phone_number.as_national }}</p>
-                    {% else %}
-                        <span class="text-lg font-bold text-gray-500 dark:text-gray-400"><em>{{ phone_number_default }}</em></span>
-                {% endif %}
-            </div>
-    
-            <!-- Email -->
-            <div class="inline-flex items-center">
-                <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 mt-1 text-gray-500 h-6 w-6" fill="none"
-                    viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                    <path stroke-linecap="round" stroke-linejoin="round"
-                        d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
-                </svg>
-                {% if staff.email %}
-                    <p class="text-lg font-bold text-gray-500 dark:text-gray-400">{{ staff.email }}</p>
-                    {% else %}
-                        <span class="text-lg font-bold text-gray-500 dark:text-gray-400"><em>email not given</em></span>
-                {% endif %}
-            </div>
-    
-            <!-- Birthday -->
-            <div class="inline-flex items-center">
-                <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-6 w-6 text-gray-500" fill="none"
-                    viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                    <path stroke-linecap="round" stroke-linejoin="round"
-                        d="M21 15.546c-.523 0-1.046.151-1.5.454a2.704 2.704 0 01-3 0 2.704 2.704 0 00-3 0 2.704 2.704 0 01-3 0 2.704 2.704 0 00-3 0 2.704 2.704 0 01-3 0 2.701 2.701 0 00-1.5-.454M9 6v2m3-2v2m3-2v2M9 3h.01M12 3h.01M15 3h.01M21 21v-7a2 2 0 00-2-2H5a2 2 0 00-2 2v7h18zm-3-9v-2a2 2 0 00-2-2H8a2 2 0 00-2 2v2h12z" />
-                </svg>
-                {% if staff.birth_day %}
-                    <p class="text-lg font-bold text-gray-500 dark:text-gray-400">{{ staff.birth_month_verbose }} {{ staff.birth_day }}</p>
-                    {% else %}
-                        <span class="text-lg font-bold text-gray-500 dark:text-gray-400"><em>birthday</em></span>
-                {% endif %}
-            </div>
-            <br>
-    
-            <!-- Update and Remove button -->
-            <div class="flex mt-4 space-x-3 lg:mt-6">
-    
-                <!-- Update button -->
-                <a href="{% url 'updatestaff' staff.id %}">
-                    <button type="button" class="inline-flex items-center mr-1 ml-1 px-4 py-2 border border-green-500 rounded-md shadow-sm 
-                                                    text-md font-medium text-white bg-green-600 hover:border-green-500 hover:bg-green-500 
-                                                    focus:outline-none focus:ring-4 focus:ring-green-400">
-                        <svg class="-ml-1 mr-2 h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
-                            fill="currentColor" aria-hidden="true">
-                            <path
-                                d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z" />
+            </div>   
+
+            <!-- Other fields -->
+            <div class="grid gap-6 justify-between md:px-4 mt-4 md:mt-12 mb-6 lg:grid-cols-2">
+
+                <!-- Gender -->
+                <div class="inline-flex items-center justify-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 text-gray-500 h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+                        stroke-width="2">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
+                    </svg>
+                    {% if staff.gender %}
+                        <p class="text-lg font-bold text-gray-500 dark:text-gray-400">{{ staff.gender }}</p>
+                        {% else %}
+                            <span class="-mt-1 text-lg font-bold text-gray-500 dark:text-gray-400"><em>not given</em></span>
+                    {% endif %}
+                </div>       
+
+                <!-- Cadre -->
+                <div class="inline-flex items-center justify-center md:justify-center">
+                    <span class="inline-flex items-center">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 text-gray-500 h-6 w-6" fill="none"
+                            viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M21 13.255A23.931 23.931 0 0112 15c-3.183 0-6.22-.62-9-1.745M16 6V4a2 2 0 00-2-2h-4a2 2 0 00-2 2v2m4 6h.01M5 20h14a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
                         </svg>
-                        Update
+                        {% if staff.cadre %}
+                            <p class="text-center text-lg font-bold text-gray-500 dark:text-gray-400">{{ staff.cadre }}</p>
+                            {% else %}
+                                <span class="-mt-1 text-lg font-bold text-gray-500 dark:text-gray-400"><em>Cadre not given</em></span>
+                        {% endif %}
+                    </span>
+                </div>
+        
+                <!-- Phone Number -->
+                <div class="inline-flex items-center justify-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mt-1 mr-2 text-gray-500 h-6 w-6" fill="none"
+                        viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" />
+                    </svg>
+                    {% if staff.phone_number %}
+                        <p class="text-lg font-bold text-gray-500 dark:text-gray-400">{{ staff.phone_number.as_national }}</p>
+                        {% else %}
+                            <span class="text-lg font-bold text-gray-500 dark:text-gray-400"><em>{{ phone_number_default }}</em></span>
+                    {% endif %}
+                </div>
+        
+                <!-- Email -->
+                <div class="inline-flex items-center justify-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 mt-1 text-gray-500 h-6 w-6" fill="none"
+                        viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
+                    </svg>
+                    {% if staff.email %}
+                        <p class="text-lg font-bold text-gray-500 dark:text-gray-400">{{ staff.email }}</p>
+                        {% else %}
+                            <span class="text-lg font-bold text-gray-500 dark:text-gray-400"><em>email not given</em></span>
+                    {% endif %}
+                </div>
+
+                <!-- Level -->
+                <div class="inline-flex items-center justify-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 text-gray-500 h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+                        stroke-width="2">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" />
+                    </svg>
+                    {% if staff.level %}
+                        <p class="text-lg font-bold text-gray-500 dark:text-gray-400">Grade Level {{ staff.level }}</p>
+                        {% else %}
+                            <span class="-mt-1 text-lg font-bold text-gray-500 dark:text-gray-400"><em>not given</em></span>
+                    {% endif %}
+                </div>
+
+                <!-- Step -->
+                <div class="inline-flex items-center justify-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 text-gray-500 h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+                        stroke-width="2">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" />
+                    </svg>
+                    {% if staff.step %}
+                        <p class="text-lg font-bold text-gray-500 dark:text-gray-400">Step {{ staff.step }}</p>
+                        {% else %}
+                            <span class="-mt-1 text-lg font-bold text-gray-500 dark:text-gray-400"><em>not given</em></span>
+                    {% endif %}
+                </div>
+        
+                <!-- Birthday -->
+                <div class="inline-flex items-center justify-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-6 w-6 text-gray-500" fill="none"
+                        viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M21 15.546c-.523 0-1.046.151-1.5.454a2.704 2.704 0 01-3 0 2.704 2.704 0 00-3 0 2.704 2.704 0 01-3 0 2.704 2.704 0 00-3 0 2.704 2.704 0 01-3 0 2.701 2.701 0 00-1.5-.454M9 6v2m3-2v2m3-2v2M9 3h.01M12 3h.01M15 3h.01M21 21v-7a2 2 0 00-2-2H5a2 2 0 00-2 2v7h18zm-3-9v-2a2 2 0 00-2-2H8a2 2 0 00-2 2v2h12z" />
+                    </svg>
+                    {% if staff.birth_day %}
+                        <p class="text-lg font-bold text-gray-500 dark:text-gray-400">{{ staff.birth_month_verbose }} {{ staff.birth_day }}</p>
+                        {% else %}
+                            <span class="text-lg font-bold text-gray-500 dark:text-gray-400"><em>birthday</em></span>
+                    {% endif %}
+                </div>
+            </div>
+                    
+            <!-- Update and Remove button -->
+            <div class="flex items-center justify-between space-x-4">
+            
+                <!-- Update button -->
+                <a href="{% url 'updatestaff' staff.id %}" class="mt-8">
+                    <button type="button" class="inline-flex items-center mr-1 ml-1 px-8 py-2 border border-green-500 rounded-md shadow-sm 
+                                                text-md font-medium text-white bg-green-600 hover:border-green-500 hover:bg-green-500 
+                                                focus:outline-none focus:ring-4 focus:ring-green-400 w-full">
+                        <span class="inline-flex items-center">
+                            <svg class="-ml-1 mr-2 h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
+                                fill="currentColor" aria-hidden="true">
+                                <path
+                                    d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z" />
+                            </svg>
+                            Update
+                        </span>
                     </button>
                 </a>
-    
+            
                 <!-- Remove -->
-                <a>
-                    <button type="button" class="inline-flex items-center ml-1 px-4 py-2 border border-red-700 rounded-md shadow-sm 
-                                                    text-md font-medium text-white bg-red-700 hover:border-red-600 hover:bg-red-600 
-                                                    focus:outline-none focus:ring-4 focus:ring-red-500">
+                <a href="#" class="mt-8">
+                    <button type="button" class="inline-flex w-full items-center ml-1 px-8 py-2 border border-red-700 rounded-md shadow-sm 
+                                                text-md font-medium text-white bg-red-700 hover:border-red-600 hover:bg-red-600 
+                                                focus:outline-none focus:ring-4 focus:ring-red-500">
                         <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5 text-white" fill="none"
                             viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                             <path stroke-linecap="round" stroke-linejoin="round"
@@ -144,8 +195,8 @@
 
             <!-- Submit Query -->
             <button type="submit" class="px-8 py-4 ml-2 text-md font-medium text-white bg-blue-700 rounded-md border
-                                            border-2 border-blue-700 hover:border-blue-800 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 
-                                            dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+                                        border-2 border-blue-700 hover:border-blue-800 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 
+                                        dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"
                     xmlns="http://www.w3.org/2000/svg">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
