--- a/templates/searchresult.html
+++ b/templates/searchresult.html
@@ -55,7 +55,7 @@
                         <div class="flex items-center space-x-4">
                             <!-- Profile Picture -->
                             <div class="flex-shrink-0">
-                                <img class="w-14 h-14 rounded-full" src="{{ staff.staffimage.url }}"
+                                <img class="w-14 h-14 rounded-full" src="{{ staff.staff_image.url }}"
                                     alt="{{ staff.first_name }}'s' image">
                             </div>
         
