--- a/sendmail/templates/updatestaff.html
+++ b/sendmail/templates/updatestaff.html
@@ -131,7 +131,7 @@
                 <div class="flex items-center w-full space-x-4">
     
                     <!-- Update Cancel -->
-                    <button type="submit" class="group relative w-full flex-auto py-3 px-4 border border-transparent 
+                    <button type="submit" class="group relative w-full flex-auto py-3 px-4 border border-none 
                                                 text-md font-medium rounded-md text-white bg-indigo-700 hover:bg-indigo-600 focus:outline-none 
                                                 focus:ring-4 focus:ring-indigo-500 mt-6">
                         <span class="absolute left-0 inset-y-0 flex items-center pl-3">
@@ -144,13 +144,13 @@
                     </button>
     
                     <!-- Cancel Button -->
-                    <button type="button" 
-                                class="w-full flex-auto mt-6 relative py-3 px-4 border border-red-700 text-md font-medium hover:border-red-600
-                                        rounded-md text-white bg-red-700 hover:bg-red-600 focus:outline-none focus:ring-4 focus:ring-red-500">
-                        <a href="{% url 'staffdetails' staff.id %}">
-                            Back to Profile
-                        </a>
-                    </button>
+                    <a href="{% url 'staffdetails' staff.id %}">
+                        <button type="button" 
+                                    class="w-full flex-auto mt-6 relative py-3 px-4 border border-red-600 text-md font-medium hover:border-red-600
+                                            rounded-md text-white bg-red-500 hover:bg-red-600 focus:outline-none focus:ring-4 focus:ring-red-500">
+                                Back to Profile
+                        </button>
+                    </a>
                 </div>
             </form>
         </div>
