fixed staffdetails.html 12:20am 14/06/2022

--- a/sendmail/templates/addstaff.html
+++ b/sendmail/templates/addstaff.html
@@ -128,10 +128,11 @@
                 </div>
     
                 <!-- Submit Button -->
-                <div>
-                    <button type="submit" class="group relative w-full flex justify-center mt-8 mb-4 py-4 px-4 border border-transparent 
+                <div class="flex items-center w-full space-x-4">
+                    <!-- Add -->
+                    <button type="submit" class="group relative w-full flex items-center mx-auto justify-center mt-6 mb-4 py-4 px-4 border border-transparent 
                                                 text-md font-medium rounded-md text-white bg-indigo-700 hover:bg-indigo-600 focus:outline-none 
-                                                 focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                                                 focus:ring-4 focus:ring-indigo-400">
                         <span class="absolute left-0 inset-y-0 flex items-center pl-3">
                             <!-- Heroicon name: user-plus -->
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" viewBox="0 0 20 20" fill="currentColor">
@@ -140,6 +141,20 @@
                             </svg>
                         </span>
                         Add
+                    </button>
+
+                    <!-- Clear form -->
+                    <button type="submit" class="group relative w-full flex items-center mx-auto justify-center mt-6 mb-4 py-4 px-4 border border-red-600 
+                                                text-md font-medium rounded-md text-white bg-red-600 hover:bg-red-500 focus:outline-none 
+                                                 focus:ring-4 focus:ring-red-500 hover:border-red-300">
+                        <span class="absolute left-0 inset-y-0 flex items-center pl-3">
+                            <!-- Heroicon name: user-plus -->
+                            <!-- <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" viewBox="0 0 20 20" fill="currentColor">
+                                <path
+                                    d="M8 9a3 3 0 100-6 3 3 0 000 6zM8 11a6 6 0 016 6H2a6 6 0 016-6zM16 7a1 1 0 10-2 0v1h-1a1 1 0 100 2h1v1a1 1 0 102 0v-1h1a1 1 0 100-2h-1V7z" />
+                            </svg> -->
+                        </span>
+                        Clear
                     </button>
                 </div>
             </form>
