--- a/sendmail/templates/index.html
+++ b/sendmail/templates/index.html
@@ -20,7 +20,7 @@
 		<div class="max-w-3xl rounded-lg mx-auto">
 	
 			<!-- Search form -->
-			<form action="{% url 'searchresult' %}" class="-mt-32 -mb-32 md:-mt-48 md:-mb-46 min-h-screen flex items-center" method="GET">
+			<form action="{% url 'searchresult' %}" class="-mt-32 -mb-32 md:-mt-8 md:-mb-46 lg:-mt-48 lg:-mb-48 min-h-screen flex items-center" method="GET">
 
 				<!-- Input -->
 				<div class="relative w-full">
