--- a/sendmail/templates/staffdetails.html
+++ b/sendmail/templates/staffdetails.html
@@ -40,43 +40,41 @@
             </button>
         </form>
     </div>
+    
+    <!-- Profile Card -->
+    <div class="max-w-3xl mx-auto px-8 mb-32 bg-white rounded-lg border border-gray-200 shadow-lg dark:bg-gray-800 dark:border-gray-700">   
 
-    <!-- Profile card -->
-    <div class="min-h-full flex-col container mt-8 mb-8 md:mb-8 mx-auto items-center md:max-w-3xl 
-                w-full bg-white rounded-lg border border-gray-200 shadow-md flex md:flex-row 
-                md:justify-between px-8 md:space-x-2 justify-between">  
-        
-        
-        <!-- Image and Name -->
-        <div class="md:w-1/2">
-            <!-- Profile Picture -->    
-            <div class="flex items-center justify-center md:px-4 mb-3">
-                <img class="md:-mt-3 mt-8 mb-3 w-48 h-48 rounded-full shadow-lg" src="{{ staff.staff_image.url }}"
-                    alt="{{ staff.first_name }} {{ staff.last_name }} image">
-            </div>
+        <!-- Container -->
+        <div class="flex flex-col items-center py-8">
+
+            <!-- Profile Image -->
+            <img class="mb-4 w-32 h-32 rounded-full shadow-lg" src="{{ staff.staff_image.url }}"
+                alt="{{ staff.first_name }} {{ staff.last_name }} image">
             
             <!-- Name -->
-            <div class="text-center">
-                <h5 class="text-3xl font-extrabold text-gray-800 dark:text-white">
-                    {{ staff.first_name }}
-                    {% if staff.middle_name %}
-                        {{ staff.middle_name }}
-                        {% else %}
-                            <span></span>
-                    {% endif %}
-                    {{ staff.last_name }}
-                </h5>
-            </div>
-        </div>
+            <h5 class="mb-4 text-3xl text-center font-extrabold text-gray-800 dark:text-white">
+                {{ staff.first_name }}
+                {% if staff.middle_name %}
+                    {{ staff.middle_name }}
+                    {% else %}
+                        <span></span>
+                {% endif %}
+                {{ staff.last_name }}
+            </h5>
 
-        <!-- Other fields -->
-        <div class="md:w-3/5 w-full flex flex-col md:px-0 py-8 mb-4">
+            <!-- Cadre -->
+            <span class="mb-8 md:mb-8 lg:mb-4 text-lg font-bold text-center text-gray-500">
+                {{ staff.cadre }}
+            </span>
 
-            <!-- Container fields -->
-            <div class="block space-y-4">
+            <!-- Horizontal line -->
+		    <hr class="mb-4 border border-1 border-gray-300 w-full mx-auto dark:border-gray-700 lg:my-8">
             
+            <!-- Below the line/Other fields -->
+            <div class="grid gap-6 mt-4 md:mt-4 mb-8 md:grid-cols-2 lg:grid-cols-3 justify-center">
+
                 <!-- Gender -->
-                <div class="flex-row items-center">
+                <div class="flex flex-row items-center justify-center">
                     <span class="inline-flex items-center">
                         <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 text-gray-500 h-6 w-6" fill="none" viewBox="0 0 24 24"
                             stroke="currentColor" stroke-width="2">
@@ -84,31 +82,15 @@
                                 d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
                         </svg>
                         {% if staff.gender %}
-                            <p class="text-lg font-bold text-gray-500 dark:text-gray-400">{{ staff.gender_verbose }}</p>
+                            <p class="text-lg font-bold text-gray-500 text-center dark:text-gray-400">{{ staff.gender_verbose }}</p>
                             {% else %}
                                 <span class="-mt-1 text-lg font-bold text-gray-500 dark:text-gray-400"><em>not given</em></span>
                         {% endif %}
                     </span>
-                </div>
-            
-                <!-- Cadre -->
-                <div class="flex-row items-center justify-center">
-                    <span class="inline-flex items-center">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="flex-nowrap mt-1 -ml-1 mr-2 text-gray-500 h-6 w-6" fill="none"
-                            viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                            <path stroke-linecap="round" stroke-linejoin="round"
-                                d="M21 13.255A23.931 23.931 0 0112 15c-3.183 0-6.22-.62-9-1.745M16 6V4a2 2 0 00-2-2h-4a2 2 0 00-2 2v2m4 6h.01M5 20h14a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
-                        </svg>
-                        {% if staff.cadre %}
-                            <p class="items-center text-lg font-bold text-gray-500 dark:text-gray-400">{{ staff.cadre }}</p>
-                            {% else %}
-                                <p class="-mt-1 text-lg font-bold text-gray-500 dark:text-gray-400"><em>Cadre not given</em></p>
-                        {% endif %}
-                    </span>
-                </div>
+                </div>            
             
                 <!-- Grade Level -->
-                <div class="flex-row items-center justify-center">
+                <div class="flex flex-row items-center justify-center">
                     <span class="inline-flex items-center">
                         <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 text-gray-500 h-6 w-6" fill="none" viewBox="0 0 24 24"
                             stroke="currentColor" stroke-width="2">
@@ -124,7 +106,7 @@
                 </div>
             
                 <!-- Step -->
-                <div class="flex-row align-middle justify-center">
+                <div class="flex flex-row align-middle justify-center">
                     <span class="inline-flex items-center">
                         <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 text-gray-500 h-6 w-6" fill="none" viewBox="0 0 24 24"
                             stroke="currentColor" stroke-width="2">
@@ -140,7 +122,7 @@
                 </div>
             
                 <!-- Phone Number -->
-                <div class="flex-row items-center justify-center">
+                <div class="flex flex-row items-center justify-center">
                     <span class="inline-flex">
                         <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mt-1 mr-2 text-gray-500 h-6 w-6" fill="none"
                             viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
@@ -156,7 +138,7 @@
                 </div>
             
                 <!-- Email -->
-                <div class="flex-row items-center justify-center">
+                <div class="flex flex-row items-center justify-center">
                     <span class="inline-flex">
                         <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 mt-1 text-gray-500 h-6 w-6" fill="none"
                             viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
@@ -172,7 +154,7 @@
                 </div>
             
                 <!-- Birthday -->
-                <div class="inline-flex items-center justify-center">
+                <div class="flex flex-row items-center justify-center">
                     <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-6 w-6 text-gray-500" fill="none" viewBox="0 0 24 24"
                         stroke="currentColor" stroke-width="2">
                         <path stroke-linecap="round" stroke-linejoin="round"
@@ -185,40 +167,58 @@
                     {% endif %}
                 </div>
             </div>
-                    
-            <!-- Update and Remove button -->
-            <div class="flex-row items-center space-x-4 mt-8">
             
-                <!-- Update button -->
-                <a href="{% url 'updatestaff' staff.id %}" class="mt-4">
-                    <button type="button" class="inline-flex items-center mr-1 ml-1 px-8 py-2 border border-blue-600 rounded-md shadow-sm 
-                                                text-md font-medium text-white bg-indigo-600 hover:border-indigo-500 hover:bg-indigo-500 
-                                                focus:outline-none focus:ring-4 focus:ring-blue-500">
-                        <span class="inline-flex items-center">
-                            <svg class="-ml-1 mr-2 h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
-                                fill="currentColor" aria-hidden="true">
-                                <path
-                                    d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z" />
-                            </svg>
-                            Update
-                        </span>
-                    </button>
-                </a>
-            
-                <!-- Remove -->
-                <a href="#" class="mt-4">
-                    <button type="button" class="inline-flex items-center ml-1 px-8 py-2 border border-red-500 rounded-md shadow-sm 
-                                                text-md font-medium text-white bg-red-500 hover:border-red-600 hover:bg-red-600 
-                                                focus:outline-none focus:ring-4 focus:ring-red-500">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5 text-white" fill="none"
+                <!-- Cadre -->
+                <!-- <div class="flex-row items-center justify-center">
+                    <span class="inline-flex items-center">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="flex-nowrap mt-1 -ml-1 mr-2 text-gray-500 h-6 w-6" fill="none"
                             viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                             <path stroke-linecap="round" stroke-linejoin="round"
-                                d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
+                                d="M21 13.255A23.931 23.931 0 0112 15c-3.183 0-6.22-.62-9-1.745M16 6V4a2 2 0 00-2-2h-4a2 2 0 00-2 2v2m4 6h.01M5 20h14a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
                         </svg>
-                        Remove
-                    </button>
-                </a>
-            </div>
+                        {% if staff.cadre %}
+                            <p class="items-center text-lg font-bold text-gray-500 dark:text-gray-400">{{ staff.cadre }}</p>
+                            {% else %}
+                                <p class="-mt-1 text-lg font-bold text-gray-500 dark:text-gray-400"><em>Cadre not given</em></p>
+                        {% endif %}
+                    </span>
+                </div> -->
+
+                <!-- Update and Remove buttons -->
+                <div class="flex mt-4 mb-4 space-x-3 lg:mt-6">
+                    <!-- Update button -->
+                    <a href="{% url 'updatestaff' staff.id %}">
+                        <button type="button" class="inline-flex items-center mr-1 ml-1 px-8 py-3 border border-blue-600 rounded-md shadow-sm 
+                                                    text-md font-medium text-white bg-blue-700 hover:border-indigo-500 hover:bg-blue-800 
+                                                    text-center focus:outline-none focus:ring-4 focus:ring-blue-400">
+                            <span class="inline-flex items-center">
+                                <svg class="-ml-1 mr-2 h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
+                                    fill="currentColor" aria-hidden="true">
+                                    <path
+                                        d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z" />
+                                </svg>
+                                Update
+                            </span>
+                        </button>
+                    </a>
+
+                    <!-- Remove -->
+                    <a href="#">
+                        <button type="button" class="inline-flex items-center ml-1 px-8 py-3 border border-red-600 rounded-md shadow-sm 
+                                                    text-md font-medium text-white bg-red-600 hover:border-red-500 hover:bg-red-500 
+                                                    focus:outline-none focus:ring-4 focus:ring-red-500">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5 text-white" fill="none"
+                                viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
+                            </svg>
+                            Remove
+                        </button>
+                    </a>
+                </div>
+
+            </div>              
+            
         </div>
-    </div>
+    </div> 
 {% endblock %}
