--- a/sendmail/templates/updatestaff.html
+++ b/sendmail/templates/updatestaff.html
@@ -34,15 +34,15 @@
     </div>  
 
     <!-- Outer Container -->
-    <div class="min-h-full flex items-center justify-center mx-auto mb-8 py-8 sm:px-6 lg:px-8">
+    <div class="min-h-full flex items-center justify-center mx-auto mb-20 py-8 sm:px-6 lg:px-8">
     
         <!-- Inner Container -->
         <div class="max-w-3xl w-full bg-white shadow-md rounded-lg px-10 pb-10 py-6">
     
             <!-- Form itle -->
             <div class="w-full">
-                <h2 class="mt-4 text-center text-2xl font-extrabold text-gray-900">
-                    UPDATE "<span class="underline underline-offset-2">{{ staff.first_name }}'s</span>" DETAILS
+                <h2 class="mt-4 text-center text-3xl font-extrabold text-gray-900">
+                    <span class="underline underline-offset-2">Update "{{ staff.first_name }}'s" Details</span>
                 </h2>
             </div>
 
@@ -57,98 +57,101 @@
                     <!-- First Name -->
                     <div>
                         <label for="first_name" class="block mb-2 text-md font-bold text-gray-500 dark:text-gray-300">{{ form.first_name.label }}</label>
-                        {% render_field form.first_name class+="text-md md:text-md font-medium block rounded-lg w-full p-3 border bg-gray-100 placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10" %}                        
+                        {% render_field form.first_name class+="text-md md:text-md font-medium block rounded-md w-full p-3 border bg-gray-100 placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10" %}                        
                     </div>
 
                     <!-- Middle Name -->
                     <div>
                         <label for="middle_name" class="block mb-2 text-md font-bold text-gray-500 dark:text-gray-300">{{ form.middle_name.label }}</label>
-                        {% render_field form.middle_name class+="text-md md:text-md font-medium block rounded-lg w-full p-3 border bg-gray-100 placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10" %}                        
+                        {% render_field form.middle_name class+="text-md md:text-md font-medium block rounded-md w-full p-3 border bg-gray-100 placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10" %}                        
                     </div>
 
                     <!-- Last Name -->
                     <div>
                         <label for="last_name" class="block mb-2 text-md font-bold text-gray-500 dark:text-gray-300">{{ form.last_name.label }}</label>
-                        {% render_field form.last_name class+="text-md md:text-md font-medium block rounded-lg w-full p-3 border bg-gray-100 placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10" %}                        
+                        {% render_field form.last_name class+="text-md md:text-md font-medium block rounded-md w-full p-3 border bg-gray-100 placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10" %}                        
                     </div>
 
                     <!-- Gender -->
                     <div>
                         <label for="gender" class="block mb-2 text-md font-bold text-gray-500 dark:text-gray-300">{{ form.gender.label }}</label>
-                        {% render_field form.gender class+="text-md md:text-md font-medium block rounded-lg w-full p-3 border bg-gray-100 placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10" %}                        
+                        {% render_field form.gender class+="text-md md:text-md font-medium block rounded-md w-full p-3 border bg-gray-100 placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10" %}                        
                     </div>
                     
                     <!-- Phone Number -->
                     <div>
                         <label for="phone_number" class="block mb-2 text-md font-bold text-gray-500 dark:text-gray-300">{{ form.phone_number.label }}</label>
-                        {% render_field form.phone_number class+="text-md md:text-md font-medium block rounded-lg w-full p-3 border bg-gray-100 placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10" %}                        
+                        {% render_field form.phone_number class+="text-md md:text-md font-medium block rounded-md w-full p-3 border bg-gray-100 placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10" %}                        
                     </div>
                     
                     <!-- Official Email -->
                     <div>
                         <label for="email" class="block mb-2 text-md font-bold text-gray-500 dark:text-gray-300">{{ form.email.label }}</label>
-                        {% render_field form.email class+="text-md md:text-md font-medium block rounded-lg w-full p-3 border bg-gray-100 placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10" %}                        
+                        {% render_field form.email class+="text-md md:text-md font-medium block rounded-md w-full p-3 border bg-gray-100 placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10" %}                        
                     </div>
                     
                     <!-- Cadre -->
                     <div>
                         <label for="cadre" class="block mb-2 text-md font-bold text-gray-500 dark:text-gray-300">{{ form.cadre.label }}</label>
-                        {% render_field form.cadre class+="text-md md:text-md font-medium block rounded-lg w-full p-3 border bg-gray-100 placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10" %}                        
+                        {% render_field form.cadre class+="text-md md:text-md font-medium block rounded-md w-full p-3 border bg-gray-100 placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10" %}                        
                     </div>
                     
                     <!-- Level -->
                     <div>
                         <label for="level" class="block mb-2 text-md font-bold text-gray-500 dark:text-gray-300">{{ form.level.label }}</label>
-                        {% render_field form.level class+="text-md md:text-md font-medium block rounded-lg w-full p-3 border bg-gray-100 placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10" %}                        
+                        {% render_field form.level class+="text-md md:text-md font-medium block rounded-md w-full p-3 border bg-gray-100 placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10" %}                        
                     </div>
                     
                     <!-- Step -->
                     <div>
                         <label for="step" class="block mb-2 text-md font-bold text-gray-500 dark:text-gray-300">{{ form.step.label }}</label>
-                        {% render_field form.step class+="text-md md:text-md font-medium block rounded-lg w-full p-3 border bg-gray-100 placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10" %}                        
+                        {% render_field form.step class+="text-md md:text-md font-medium block rounded-md w-full p-3 border bg-gray-100 placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10" %}                        
                     </div>
                     
                     <!-- Birth Month -->
                     <div>
                         <label for="birth_month" class="block mb-2 text-md font-bold text-gray-500 dark:text-gray-300">{{ form.birth_month.label }}</label>
-                        {% render_field form.birth_month class+="text-md md:text-md font-medium block rounded-lg w-full p-3 border bg-gray-100 placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10" %}                        
+                        {% render_field form.birth_month class+="text-md md:text-md font-medium block rounded-md w-full p-3 border bg-gray-100 placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10" %}                        
                     </div>
                     
                     <!-- Birth Day -->
                     <div>
                         <label for="birth_day" class="block mb-2 text-md font-bold text-gray-500 dark:text-gray-300">{{ form.birth_day.label }}</label>
-                        {% render_field form.birth_day class+="text-md md:text-md font-medium block rounded-lg w-full p-3 border bg-gray-100 placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10" %}                        
+                        {% render_field form.birth_day class+="text-md md:text-md font-medium block rounded-md w-full p-3 border bg-gray-100 placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10" %}                        
                     </div>
                         
                     <!-- Profile Picture -->
                     <div>
                         <label for="staff_image" class="block mb-2 text-md font-bold text-gray-500 dark:text-gray-300">{{ form.staff_image.label }}</label>
-                        {% render_field form.staff_image class+="text-md md:text-md font-medium block rounded-lg w-full p-3 border bg-gray-100 placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10" %}                        
+                        {% render_field form.staff_image class+="text-md md:text-md font-medium block rounded-md w-full p-3 border bg-gray-100 placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10" %}                        
                     </div>
                 </div>
-    
-                <!-- Update / Cancel Buttons -->
-                <div class="flex items-center w-full space-x-4">
-    
-                    <!-- Update Cancel -->
-                    <button type="submit" class="group relative w-full flex-auto py-3 px-4 border border-none 
-                                                text-md font-medium rounded-md text-white bg-indigo-700 hover:bg-indigo-600 focus:outline-none 
-                                                focus:ring-4 focus:ring-indigo-500 mt-6">
-                        <span class="absolute left-0 inset-y-0 flex items-center pl-3">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 20 20" fill="currentColor">
-                                <path
-                                    d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z" />
-                            </svg>
-                        </span>
-                        Update
-                    </button>
-    
-                    <!-- Cancel Button -->
+                
+                
+                <!-- Update and Remove buttons -->
+                <div class="flex items-center mb-4 space-x-3 lg:mt-6">
+                    <!-- Update button -->
+                    <a>
+                        <button type="submit" class="mt-8 inline-flex mr-1 ml-1 px-8 py-4 border border-blue-600 rounded-md shadow-sm 
+                                                    text-md font-medium text-white bg-blue-700 hover:border-indigo-500 hover:bg-blue-800 
+                                                    text-center focus:outline-none focus:ring-4 focus:ring-blue-400">
+                            <span class="inline-flex items-center">
+                                <svg class="-ml-1 mr-2 h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
+                                    fill="currentColor" aria-hidden="true">
+                                    <path
+                                        d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z" />
+                                </svg>
+                                Update
+                            </span>
+                        </button>
+                    </a>
+
+                    <!-- Back to Profile -->
                     <a href="{% url 'staffdetails' staff.id %}">
-                        <button type="button" 
-                                    class="w-full flex-auto mt-6 relative py-3 px-4 border border-red-600 text-md font-medium hover:border-red-600
-                                            rounded-md text-white bg-red-500 hover:bg-red-600 focus:outline-none focus:ring-4 focus:ring-red-500">
-                                Back to Profile
+                        <button type="button" class="mt-8 ml-1 px-8 py-4 border border-red-600 rounded-md shadow-sm 
+                                                    text-md font-medium text-white bg-red-600 hover:border-red-500 hover:bg-red-500 
+                                                    focus:outline-none focus:ring-4 focus:ring-red-500">
+                            Back to Profile
                         </button>
                     </a>
                 </div>
