edited gender field 2:27pm 14/06/2022

--- a/sendmail/templates/updatestaff.html
+++ b/sendmail/templates/updatestaff.html
@@ -132,7 +132,7 @@
                 <div class="flex items-center mb-4 space-x-3 lg:mt-6">
                     <!-- Update button -->
                     <a>
-                        <button type="submit" class="mt-8 inline-flex mr-1 ml-1 px-8 py-4 border border-blue-600 rounded-md shadow-sm 
+                        <button type="submit" class="mt-8 inline-flex mr-1 ml-1 px-8 py-2 border border-blue-600 rounded-md shadow-sm 
                                                     text-md font-medium text-white bg-blue-700 hover:border-indigo-500 hover:bg-blue-800 
                                                     text-center focus:outline-none focus:ring-4 focus:ring-blue-400">
                             <span class="inline-flex items-center">
@@ -148,10 +148,10 @@
 
                     <!-- Back to Profile -->
                     <a href="{% url 'staffdetails' staff.id %}">
-                        <button type="button" class="mt-8 ml-1 px-8 py-4 border border-red-600 rounded-md shadow-sm 
+                        <button type="button" class="mt-8 ml-1 px-8 py-2 border border-red-600 rounded-md shadow-sm 
                                                     text-md font-medium text-white bg-red-600 hover:border-red-500 hover:bg-red-500 
                                                     focus:outline-none focus:ring-4 focus:ring-red-500">
-                            Back to Profile
+                            Cancel
                         </button>
                     </a>
                 </div>
