--- a/sendmail/templates/addstaff.html
+++ b/sendmail/templates/addstaff.html
@@ -2,6 +2,12 @@
 {% load static %}
 {% load widget_tweaks %}
 
+{% block title %}
+    <title>
+        Add a Staff
+    </title>
+{% endblock %}
+
 {% block content %}  
     <!-- Search bar -->
     <div class="max-w-3xl rounded-lg mx-auto mt-8">
@@ -130,7 +136,7 @@
                 <!-- Submit Button -->
                 <div class="flex items-center w-full space-x-4">
                     <!-- Add -->
-                    <button type="submit" class="group relative w-full flex items-center mx-auto justify-center mt-6 mb-4 py-4 px-4 border border-transparent 
+                    <button type="submit" class="group relative w-full flex items-center mx-auto justify-center mt-6 mb-4 py-3 px-4 border border-transparent 
                                                 text-md font-medium rounded-md text-white bg-indigo-700 hover:bg-indigo-600 focus:outline-none 
                                                  focus:ring-4 focus:ring-indigo-400">
                         <span class="absolute left-0 inset-y-0 flex items-center pl-3">
@@ -144,7 +150,7 @@
                     </button>
 
                     <!-- Clear form -->
-                    <button type="submit" class="group relative w-full flex items-center mx-auto justify-center mt-6 mb-4 py-4 px-4 border border-red-600 
+                    <button type="submit" class="group relative w-full flex items-center mx-auto justify-center mt-6 mb-4 py-3 px-4 border border-red-600 
                                                 text-md font-medium rounded-md text-white bg-red-600 hover:bg-red-500 focus:outline-none 
                                                  focus:ring-4 focus:ring-red-500 hover:border-red-300">
                         <span class="absolute left-0 inset-y-0 flex items-center pl-3">
