--- a/sendmail/templates/staffdetails.html
+++ b/sendmail/templates/staffdetails.html
@@ -63,14 +63,20 @@
             </h5>
 
             <!-- Cadre -->
-            <span class="mb-8 md:mb-8 lg:mb-4 text-lg font-bold text-center text-gray-500">
-                {{ staff.cadre }}
-            </span>
+            {% if staff.cadre %}
+                <span class="mb-8 md:mb-8 lg:mb-4 text-lg font-bold text-center text-gray-500">
+                    {{ staff.cadre }}
+                </span>
+                {% else %}
+                    <span class="mb-8 md:mb-8 lg:mb-4 text-lg font-bold text-center text-gray-500">
+                        Cadre not given
+                    </span>
+            {% endif %}
 
             <!-- Horizontal line -->
 		    <hr class="mb-4 border border-1 border-gray-300 w-full mx-auto dark:border-gray-700 lg:my-8">
             
-            <!-- Below the line/Other fields -->
+            <!-- Below the hr line/Other fields -->
             <div class="grid gap-6 mt-4 md:mt-4 mb-8 md:grid-cols-2 lg:grid-cols-3 justify-center">
 
                 <!-- Gender -->
@@ -81,11 +87,7 @@
                             <path stroke-linecap="round" stroke-linejoin="round"
                                 d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
                         </svg>
-                        {% if staff.gender %}
-                            <p class="text-lg font-bold text-gray-500 text-center dark:text-gray-400">{{ staff.gender_verbose }}</p>
-                            {% else %}
-                                <span class="-mt-1 text-lg font-bold text-gray-500 dark:text-gray-400"><em>not given</em></span>
-                        {% endif %}
+                        <p class="text-lg font-bold text-gray-500 text-center dark:text-gray-400">{{ staff.gender_verbose }}</p>
                     </span>
                 </div>            
             
@@ -184,41 +186,157 @@
                     </span>
                 </div> -->
 
-                <!-- Update and Remove buttons -->
-                <div class="flex mt-4 mb-4 space-x-3 lg:mt-6">
-                    <!-- Update button -->
-                    <a href="{% url 'updatestaff' staff.id %}">
-                        <button type="button" class="inline-flex items-center mr-1 ml-1 px-8 py-3 border border-blue-600 rounded-md shadow-sm 
-                                                    text-md font-medium text-white bg-blue-700 hover:border-indigo-500 hover:bg-blue-800 
-                                                    text-center focus:outline-none focus:ring-4 focus:ring-blue-400">
-                            <span class="inline-flex items-center">
-                                <svg class="-ml-1 mr-2 h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
-                                    fill="currentColor" aria-hidden="true">
-                                    <path
-                                        d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z" />
-                                </svg>
-                                Update
-                            </span>
-                        </button>
-                    </a>
+            <!-- Update and Remove buttons -->
+            <div class="flex mt-4 mb-4 space-x-3 lg:mt-6">
 
-                    <!-- Remove -->
-                    <a href="#">
-                        <button type="button" class="inline-flex items-center ml-1 px-8 py-3 border border-red-600 rounded-md shadow-sm 
-                                                    text-md font-medium text-white bg-red-600 hover:border-red-500 hover:bg-red-500 
-                                                    focus:outline-none focus:ring-4 focus:ring-red-500">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5 text-white" fill="none"
-                                viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                                <path stroke-linecap="round" stroke-linejoin="round"
-                                    d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
+                <!-- Update button -->
+                <a href="{% url 'updatestaff' staff.id %}">
+                    <button type="button" class="inline-flex items-center mr-1 ml-1 px-8 py-3 border border-blue-600 rounded-md shadow-sm 
+                                                text-md font-medium text-white bg-blue-700 hover:border-indigo-500 hover:bg-blue-800 
+                                                text-center focus:outline-none focus:ring-4 focus:ring-blue-400">
+                        <span class="inline-flex items-center">
+                            <svg class="-ml-1 mr-2 h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
+                                fill="currentColor" aria-hidden="true">
+                                <path
+                                    d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z" />
                             </svg>
-                            Remove
-                        </button>
-                    </a>
+                            Update
+                        </span>
+                    </button>
+                </a>
+            
+                <!-- Remove -->
+                <button data-modal-toggle="popup-modal" type="button" class="inline-flex items-center ml-1 px-8 py-3 border border-red-600 rounded-md shadow-sm 
+                                                            text-md font-medium text-white bg-red-600 hover:border-red-700 hover:bg-red-700 
+                                                            focus:outline-none focus:ring-4 focus:ring-red-400"
+                    data-modal-toggle="popup-modal">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5 text-white" fill="none" viewBox="0 0 24 24"
+                        stroke="currentColor" stroke-width="2">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
+                    </svg>
+                    Remove
+                </button>
+
+
+                <!-- Modal popup (Remove Staff) -->
+                <div  id="popup-modal" tabindex="-1" class="hidden overflow-y-auto overflow-x-hidden fixed top-0 
+                                                            right-0 left-0 z-50 md:inset-0 h-modal md:h-full">
+                    <!-- Outer Container -->
+                    <div class="relative p-4 w-full max-w-md h-full md:h-auto">
+                        
+                        <!-- Inner container -->
+                        <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
+
+                            <!-- X button -->
+                            <button type="button" data-modal-toggle="popup-modal"
+                                class="absolute top-3 right-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center dark:hover:bg-gray-800 dark:hover:text-white">
+                                <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd"
+                                        d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+                                        clip-rule="evenodd"></path>
+                                </svg>
+                            </button>
+
+                            <div class="p-6 text-center">
+
+                                <!-- Exclamation icon -->
+                                <svg class="mx-auto mb-4 w-14 h-14 text-gray-400 dark:text-gray-200" fill="none" stroke="currentColor"
+                                    viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                        d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                                </svg>
+                                
+                                <!-- Warning text -->
+                                <h3 class="mb-5 text-lg font-normal text-gray-500 dark:text-gray-400">
+                                    Are you sure you want to remove this Staff? 
+                                    This action cannot be reversed
+                                </h3>
+
+                                <!-- Yes, I'm sure -->
+                                <button data-modal-toggle="popup-modal" type="button"
+                                    class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center mr-2">
+                                    Yes, I'm sure
+                                </button>
+
+                                <!-- No, Cancel button -->
+                                <button data-modal-toggle="popup-modal" type="button"
+                                    class="text-gray-500 bg-white hover:bg-gray-100 focus:ring-4 focus:outline-none focus:ring-gray-200 rounded-lg border border-gray-200 text-sm font-medium px-5 py-2.5 hover:text-gray-900 focus:z-10 dark:bg-gray-700 dark:text-gray-300 dark:border-gray-500 dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-gray-600">
+                                    No, cancel
+                                </button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
-            </div>              
-            
+                <!-- JavaScript for Modal popup -->
+                <script>
+                    // set the modal menu element
+                    const targetEl = document.getElementById('popup-modal');
+
+                    // options with default values
+                    // const options = {
+                    //     placement: 'bottom-right',
+                    //     backdropClasses: 'bg-gray-900 bg-opacity-50 dark:bg-opacity-80 fixed inset-0 z-40',
+                    //     onHide: () => {
+                    //         console.log('modal is hidden');
+                    //     },
+                    //     onShow: () => {
+                    //         console.log('modal is shown');
+                    //     },
+                    //     onToggle: () => {
+                    //         console.log('modal has been toggled');
+                    //     }
+                    // };
+
+                    /*
+                    * targetEl: required
+                    * options: optional
+                    */
+                    const modal = new Modal(targetEl, options);
+
+                    // show the modal
+                    modal.show();
+
+                    // hide the modal
+                    modal.hide();
+
+                    // toggle the modal
+                    modal.toggle();
+
+                    // Get the modal
+                    // var modal = document.getElementById("modal-remove");
+                    
+                    // // Get the button that opens the modal
+                    // var btn = document.getElementById("openmodal");
+                    
+                    // // Get the <button> element that closes the modal
+                    // var button = document.getElementsByClassName("absolute  ")[0];
+                    
+                    // // When the user clicks the button, open the modal 
+                    // btn.onclick = function() {
+                    //   modal.style.display = "block";
+                    // }
+                    
+                    // // When the user clicks on <button> (x), close the modal
+                    // button.onclick = function() {
+                    //   modal.style.display = "hidden";
+                    // }
+                    
+                    // // When the user clicks anywhere outside of the modal, close it
+                    // window.onclick = function(event) {
+                    //   if (event.target == modal) {
+                    //     modal.style.display = "hidden";
+                    //   }
+                    // }
+                </script>
+
+            <!-- End - Update and Remove buttons -->
+            </div>
+
+        <!-- End - Container -->
         </div>
-    </div> 
+
+    <!-- End - Profile Card -->
+    </div>
 {% endblock %}
